2020-02-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/math/m_hatch.c: Add todo documentation template.

    * src/math/m_line.c: Add Doxygen group math-line-proc.

    * src/object/o_*_object.c: Declare GedaObject argument a const:

          * geda_path_object_get_nearest_point
          * geda_picture_object_get_nearest_point
          * geda_text_object_get_nearest_point

    * src/object/o_picture_object.c: Fix function geda_picture_object_scale;
      copy/paste error; box->picture.

2020-02-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/math/m_circle.c: Eliminate unnecessary function line wrapping and
      add Doxygen group math-circle-proc.

    * src/math/m_hatch.c: Add Doxygen group math-hatch-proc.

    * src/object/o_*_object.c: Declare GedaObject argument a const:

          * geda_arc_object_get_nearest_point
          * geda_box_object_get_nearest_point
          * geda_circle_object_get_nearest_point
          * geda_complex_object_get_nearest_point
          * geda_line_object_get_closest_endpoint
          * geda_line_object_get_nearest_point

2020-02-11 Wiley E. Hill <wileyhill@gmail.com>

    * include/libgeda/s_struct.h: Reorganize; move define LINE_END[1,2].

    * src/object/o_line_object.c: Revise geda_line_object_modify to validate
      whichone and eliminate the switch case.

    * src/object/o_picture_object.c: Add function geda_picture_object_scale.

    * tests/test_object_list.c: Fix incorrect y-value for test O120602Y,
      the upper_y member was being incorrectly assigned to upper_x.

    * tests/test_picture_object.c: Update function listing with new function
      geda_picture_object_scale.

2020-02-10 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_box_object.c: Fix incorrect assignment in geda_box_
      object_scale; upper_x should have been upper_y.

    * tests/test_line_object.c: Revise check_line_object_mirror to restore
      the coordinates of the line and add checks for:
